--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1BDL2D75XT"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1BDL2D75XT');
+  </script>
 </html>
