Script para el chat hubspot

--- a/index.html
+++ b/index.html
@@ -19,4 +19,8 @@
 
       gtag('config', 'G-1BDL2D75XT');
   </script>
+
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/24393279.js"></script>
+<!-- End of HubSpot Embed Code -->
 </html>
