se agrego css para mover el chat en movil pun poco hacia arriba ya que se montaba encima del menu

--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/imagotipo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/imagotipo.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Noba</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1BDL2D75XT"></script>
 
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
 
-      gtag('config', 'G-1BDL2D75XT');
-  </script>
+</body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1BDL2D75XT"></script>
 
-  <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/24393279.js"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-1BDL2D75XT');
+</script>
+
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/24393279.js"></script>
 <!-- End of HubSpot Embed Code -->
 </html>
