--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/imagotipo.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/belobaba-logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Noba</title>
+    <title>Belobaba</title>
 
 </head>
 <body>
